update and add test notebook

--- a/pp_api_to_sql.ipynb
+++ b/pp_api_to_sql.ipynb
@@ -13,14 +13,100 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Config file\n",
     "import configparser\n",
+    "\n",
+    "# Serverless SQL database\n",
+    "import sqlite3\n",
+    "\n",
+    "# API and webscrape libraries\n",
     "import requests\n",
-    "import sqlite3"
+    "import re\n",
+    "from bs4 import BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Webscrape Congress Numbers"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get ProPublica documentation\n",
+    "url = 'https://projects.propublica.org/api-docs/congress-api/members/'\n",
+    "page = requests.get(url)\n",
+    "soup = BeautifulSoup(page.content, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "102-116 for House, 80-116 for Senate\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find string with available house and senate\n",
+    "param_string = soup.find('td', string='congress').find_next_sibling().text\n",
+    "print(param_string) # As of December 21st, 2020"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Regex the congresses available from API\n",
+    "sen_range = str(re.search(r'(?<=House, ).*(?= for Senate)', param_string)[0])\n",
+    "sen_range = sen_range.split('-')\n",
+    "sen_range = range(int(sen_range[0]), int(sen_range[1])+1)\n",
+    "house_range = str(re.search(r'.*(?= for H)', param_string)[0])\n",
+    "house_range = house_range.split('-')\n",
+    "house_range = range(int(house_range[0]), int(house_range[1])+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range(80, 117)\n",
+      "range(102, 117)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sen_range)\n",
+    "print(house_range)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## API Data to SQL DB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -70,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,14 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(38, 'state', 'TEXT', 0, None, 0), (39, 'senate_class', 'TEXT', 0, None, 0), (40, 'state_rank', 'TEXT', 0, None, 0), (41, 'lis_id', 'TEXT', 0, None, 0), (42, 'congress', 'TEXT', 0, None, 0)]\n"
+      "[(0, 'id', 'TEXT', 0, None, 0), (1, 'title', 'TEXT', 0, None, 0), (2, 'short_title', 'TEXT', 0, None, 0), (3, 'api_uri', 'TEXT', 0, None, 0), (4, 'first_name', 'TEXT', 0, None, 0), (5, 'middle_name', 'TEXT', 0, None, 0), (6, 'last_name', 'TEXT', 0, None, 0), (7, 'suffix', 'TEXT', 0, None, 0), (8, 'date_of_birth', 'TEXT', 0, None, 0), (9, 'gender', 'TEXT', 0, None, 0), (10, 'party', 'TEXT', 0, None, 0), (11, 'leadership_role', 'TEXT', 0, None, 0), (12, 'twitter_account', 'TEXT', 0, None, 0), (13, 'facebook_account', 'TEXT', 0, None, 0), (14, 'youtube_account', 'TEXT', 0, None, 0), (15, 'govtrack_id', 'TEXT', 0, None, 0), (16, 'cspan_id', 'TEXT', 0, None, 0), (17, 'votesmart_id', 'TEXT', 0, None, 0), (18, 'icpsr_id', 'TEXT', 0, None, 0), (19, 'crp_id', 'TEXT', 0, None, 0), (20, 'google_entity_id', 'TEXT', 0, None, 0), (21, 'fec_candidate_id', 'TEXT', 0, None, 0), (22, 'url', 'TEXT', 0, None, 0), (23, 'rss_url', 'TEXT', 0, None, 0), (24, 'contact_form', 'TEXT', 0, None, 0), (25, 'in_office', 'TEXT', 0, None, 0), (26, 'cook_pvi', 'TEXT', 0, None, 0), (27, 'dw_nominate', 'TEXT', 0, None, 0), (28, 'ideal_point', 'TEXT', 0, None, 0), (29, 'seniority', 'TEXT', 0, None, 0), (30, 'total_votes', 'TEXT', 0, None, 0), (31, 'missed_votes', 'TEXT', 0, None, 0), (32, 'total_present', 'TEXT', 0, None, 0), (33, 'last_updated', 'TEXT', 0, None, 0), (34, 'ocd_id', 'TEXT', 0, None, 0), (35, 'office', 'TEXT', 0, None, 0), (36, 'phone', 'TEXT', 0, None, 0), (37, 'fax', 'TEXT', 0, None, 0), (38, 'state', 'TEXT', 0, None, 0), (39, 'senate_class', 'TEXT', 0, None, 0), (40, 'state_rank', 'TEXT', 0, None, 0), (41, 'lis_id', 'TEXT', 0, None, 0), (42, 'congress', 'TEXT', 0, None, 0)]\n"
      ]
     }
    ],
@@ -120,13 +206,13 @@
     "    ;\n",
     "    '''\n",
     ")\n",
-    "print(c.fetchall()[-5:])\n",
+    "print(c.fetchall())\n",
     "c.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -173,7 +259,88 @@
     "\n",
     "# Insert members\n",
     "for n in congresses:\n",
-    "    insert_members(n)"
+    "    insert_members(n, 'senate')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = conn.cursor()\n",
+    "c.execute(\n",
+    "    '''\n",
+    "    SELECT * FROM senators\n",
+    "    ;\n",
+    "    '''\n",
+    ")\n",
+    "db = c.fetchall()\n",
+    "c.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('A000062',\n",
+       " 'Senator, 3rd Class',\n",
+       " 'Sen.',\n",
+       " 'https://api.propublica.org/congress/v1/members/A000062.json',\n",
+       " 'George',\n",
+       " 'David',\n",
+       " 'Aiken',\n",
+       " None,\n",
+       " '1892-08-20',\n",
+       " 'M',\n",
+       " 'R',\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " '400722',\n",
+       " None,\n",
+       " None,\n",
+       " '52',\n",
+       " None,\n",
+       " None,\n",
+       " '',\n",
+       " '',\n",
+       " None,\n",
+       " None,\n",
+       " '0',\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " '6',\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " '2013-04-12 20:11:44 -0400',\n",
+       " 'ocd-division/country:us/state:vt',\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " 'VT',\n",
+       " '3',\n",
+       " '',\n",
+       " '',\n",
+       " '80')"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db[0]"
    ]
   },
   {
