added script and functions to create db

--- a/pp_api_to_sql.ipynb
+++ b/pp_api_to_sql.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -281,66 +281,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('A000062',\n",
-       " 'Senator, 3rd Class',\n",
-       " 'Sen.',\n",
-       " 'https://api.propublica.org/congress/v1/members/A000062.json',\n",
-       " 'George',\n",
-       " 'David',\n",
-       " 'Aiken',\n",
-       " None,\n",
-       " '1892-08-20',\n",
-       " 'M',\n",
-       " 'R',\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " '400722',\n",
-       " None,\n",
-       " None,\n",
-       " '52',\n",
-       " None,\n",
-       " None,\n",
-       " '',\n",
-       " '',\n",
-       " None,\n",
-       " None,\n",
-       " '0',\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " '6',\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " '2013-04-12 20:11:44 -0400',\n",
-       " 'ocd-division/country:us/state:vt',\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " 'VT',\n",
-       " '3',\n",
-       " '',\n",
-       " '',\n",
-       " '80')"
+       "3860"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "db[0]"
+    "len(db)"
    ]
   },
   {
